synergychat-web/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-api
  labels:
    app: synergychat-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synergychat-api
  template:
    metadata:
      labels:
        app: synergychat-api
    spec:
      volumes:
        - name: cache-volume
          emptyDir: {}
        - name: synergychat-api-volume
          persistentVolumeClaim:
            claimName: synergychat-api-pvc
      containers:
        - name: synergychat-api
          image: 'localhost:5000/synergychat-api:latest'
          imagePullPolicy: Never
          volumeMounts:
            - name: synergychat-api-volume
              mountPath: /persist
