synergychat-web/testcpu-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-testcpu
  labels:
    app: synergychat-testcpu
spec:
  selector:
    matchLabels:
      app: synergychat-testcpu
  # replicas been removed to have autoscaler
  # replicas: 1
  template:
    metadata:
      labels:
        app: synergychat-testcpu
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: synergychat-testcpu
        image: "localhost:5000/synergychat-testcpu:latest"
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 50m
            memory: 1000Mi
