synergychat-web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-web
  labels:
    app: synergychat-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: synergychat-web
  template:
    metadata:
      labels:
        app: synergychat-web
    spec:
      containers:
        - name: synergychat-web
          image: 'localhost:5000/synergychat-web:latest'
          imagePullPolicy: Always
