synergychat-web/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api-service
  name: api-service
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: synergychat-api
  type: ClusterIP
status:
  loadBalancer: {}
