synergychat-web/crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: crawler-service
  name: crawler-service
  namespace: crawler
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: synergychat-crawler
  type: ClusterIP
status:
  loadBalancer: {}
