synergychat-web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web-service
  name: web-service
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: synergychat-web
  type: ClusterIP
status:
  loadBalancer: {}
